--- a/cardgen.css
+++ b/cardgen.css
@@ -5,6 +5,7 @@
 
 	--card-font-size-name: calc(48px * var(--card-scale));
 	--card-font-size-variant: calc(24px * var(--card-scale));
+	--card-font-size-stat: calc(28px * var(--card-scale));
 	--card-font-size-description: calc(18px * var(--card-scale));
 	--card-font-size-comment: calc(14px * var(--card-scale));
 
@@ -14,6 +15,10 @@
 	--card-text-border-size: calc(1.25px * var(--card-scale));
 	--card-text-border-blur: calc(0.6px * var(--card-scale));
 	--card-text-border-color: black;
+}
+
+body, input, select, option {
+	font-family: var(--card-font-family-description-comment);
 }
 
 p {
@@ -28,6 +33,22 @@ p {
 #infoEditable {
 	display: flex;
 	flex-direction: column;
+}
+
+#infoCardStats {
+	display: flex;
+	flex-direction: row;
+}
+#infoCardStats .cardStat {
+	width: 2.5em;
+	height: 1.25em;
+}
+#infoCardStats #infoCardStatuses {
+	font-family: var(--card-font-family-name-variant);
+	font-size: var(--card-font-size-stat);
+	height: 1.25em;
+	text-align: center;
+	flex-grow: 1;
 }
 
 .cardSized {
@@ -50,13 +71,16 @@ p {
 	max-width: var(--card-width);
 }
 
-.cardName, .cardTypeVariant {
+.cardName, .cardTypeVariant, .cardStat {
 	font-family: var(--card-font-family-name-variant);
 	font-size: var(--card-font-size-name);
 	--card-text-border-size: calc(3px * var(--card-scale));
 }
 .cardTypeVariant {
 	font-size: var(--card-font-size-variant);
+}
+.cardStat {
+	font-size: var(--card-font-size-stat);
 }
 
 .cardDesc, .cardComment {
@@ -65,6 +89,7 @@ p {
 }
 .cardComment {
 	font-size: var(--card-font-size-comment);
+	line-height: 1.0;
 }
 
 .color_battlecry_deathrattle {
@@ -89,4 +114,14 @@ p {
 	/* Hide on screen */
 	/*opacity: 0;
 	pointer-events: none;*/
+}
+
+#renderCardStatuses {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 5px;
+
+	/* No need to worry about scaling the gap with this... */
+	scale: var(--card-scale);
 }
